syntax = "proto3";

package taskservice;

option go_package = "./proto;taskservice";

service TaskService {
	rpc Call(CallRequest) returns (CallResponse) {}
	rpc CreateTodo(TodoItem) returns (Status) {}
	rpc GetAllTodos(Void) returns (TodoItems) {}
}

message Void {}

message TodoItem {
	string text = 1;
	string color = 2;
}

message TodoItems {
	repeated TodoItem items = 1;
}

message Status {
	string msgType = 1;
}

message CallRequest {
	string name = 1;
}

message CallResponse {
	string msg = 1;
}

message ClientStreamRequest {
	int64 stroke = 1;
}

message ClientStreamResponse {
	int64 count = 1;
}

message ServerStreamRequest {
	int64 count = 1;
}

message ServerStreamResponse {
	int64 count = 1;
}

message BidiStreamRequest {
	int64 stroke = 1;
}

message BidiStreamResponse {
	int64 stroke = 1;
}


